[gd_scene load_steps=2 format=3 uid="uid://cy2ip55vite3o"]

[ext_resource type="Script" uid="uid://dmbhcdsgc75g1" path="res://Game Logic/Basic Functionality/pausing/pause_menu.gd" id="1_i4170"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i4170")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue
"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Superquit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Superquit
"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Superquit" to="." method="_on_superquit_pressed"]
